# ug40_pipeline

./: .gitignore  README.md  __init__.py  cli.py  config.py  dedupe.py  drive_scanner.py  extractor.py  hf_uploader.py  manifests.py  requirements.txt  schema.py  setup.cfg  transformers.py
