# ============================================================================
# setup.cfg  (simplified – use pyproject.toml if you prefer)
# ============================================================================
# [metadata]
# name = ug40-pipeline
# version = 0.1.0
# description = Incremental Google Drive → Hugging Face dataset pipeline for 40 Ugandan languages
# author = Sunbird AI
# license = Apache-2.0
# 
# [options]
# packages = find:
# python_requires = >=3.10
# install_requires =
#     typer>=0.9,<1
#     pydantic>=2
#     sqlmodel>=0.0.16
#     markdown2>=2
#     xxhash>=3
#     datasets>=2.18
#     huggingface_hub>=0.23
#     google-api-python-client>=2
# 
# [options.entry_points]
# console_scripts =
#     ug40-pipeline=ug40_pipeline.cli:app